--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "./dist-electron/main.js",
   "scripts": {
     "dev:react": "vite",
-    "dev:electron" : "electron .",
+    "dev:electron": "electron .",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "transpile:electron": "tsc -p src/electron/tsconfig.json"
+    "transpile:electron": "tsc -p src/electron/tsconfig.json",
+    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
+    "dist:linx": "npm run transpile:electron && npm run build && electron-builder --linux",
+    "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -21,6 +24,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
